# spytula

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: main.yml
api/: index.html
contributing/: index.html
docs/: api.md  contributing.md  examples.md  index.md
docs/stylesheets/: extra.css
examples/: index.html
search/: search_index.json
spytula/: __init__.py  builder.py
spytula/mixins/: format.py
stylesheets/: extra.css
tests/spytula/: test_builder.py
tests/spytula/mixins/: test_format.py
usage/: index.html
