[tool.poetry]
name = "spytula"
version = "0.0.1"
description = "A Python library that provides a simple and convenient way to build JSON and YAML data structures using a builder pattern."
authors = ["Pierre Romera <hello@pirhoo.com>"]
readme = "README.md"
packages = [{include = "spytula"}]
license = "MIT"
documentation = "https://pirhoo.github.io/spytula/"
repository = "https://github.com/pirhoo/spytula/"
keywords = ["JSON", "YAML", "DSL"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: File Formats :: JSON"
]

[tool.poetry.dependencies]
python = '^3.8.1'
pytest = "^7.3.2"
pyyaml = "^6.0"
inflection = "^0.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-mock = "^3.11.1"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.16"
mkdocstrings-python = "^1.1.2"
mkdocstrings = "^0.22.0"
mkdocs-exclude = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
